# qmt_investment_assistant

./: .gitignore  AGENTS.md  METHODOLOGY.md  README.md  pyproject.toml  requirements.txt  run_decision.py  run_execute.py  run_gui.py  run_research.py  run_reset_mock.py  run_review.py  validate_project.py
.github/workflows/: ci.yml  snake.yml
configs/: README.md  all_available_factors.json  backtest.yaml  baseline_frozen.py  common.yaml  data.yaml  decision.yaml  execution.yaml  factor_pool_candidates.json  feature_set_v1.yaml  feature_set_v2_corrected.py  feature_set_v2_fixed.py  recommended_factors.py  research_contract_v1.yaml  strategy.yaml
configs/experiments/: README.md  hs300_73_factors_ic_test_v1.yaml  hs300_adaptive_8factors.yaml  hs300_adaptive_economic_v1.yaml  hs300_all_905_factors_ic_test.yaml  hs300_all_category_top_factors_v1.yaml  hs300_all_momentum.yaml  hs300_baseline_full_exposure.yaml  hs300_baseline_mom250.yaml  hs300_baseline_rank_sum.yaml  hs300_baseline_with_alphas.yaml  hs300_batch1_100f_ic_test.yaml  hs300_best_four.yaml  hs300_best_four_2019_2020.yaml  hs300_best_four_extended.yaml  hs300_best_four_holdout.yaml  hs300_best_four_lgb.yaml  hs300_best_four_ridge.yaml  hs300_combo_A.yaml  hs300_combo_A_adaptive.yaml  hs300_combo_A_ic_weighted.yaml  hs300_combo_A_lightgbm.yaml  hs300_combo_A_ridge.yaml  hs300_combo_A_simple_average.yaml  hs300_combo_B_adaptive.yaml  hs300_combo_B_ic_weighted.yaml  hs300_combo_B_lightgbm.yaml  hs300_combo_B_ridge.yaml  hs300_combo_B_simple.yaml  hs300_combo_C_adaptive.yaml  (+134 more)
docs/: AGENT_WORKFLOW.md
scripts/: README.md  add_factors_to_catalog.py  batch_ic_test.py  bootstrap_data.py  calibrate_cost_filter.py  cost_sensitivity_analysis.py  crawl_all_data.py  crawl_comprehensive_data.py  crawl_financial_baostock.py  crawl_financial_data.py  crawl_more_data.py  fast_ic_test.py  fast_ic_test2.py  fetch_all_data.py  fetch_analyst_data.py  full_factor_ic_test.py  ic_test_all_factors.py  launch_dashboard.py  multi_model_cost_comparison.py  professional_screening.py  run_best_strategy.py  run_experiment.py  true_walk_forward_oos_v2.py  verify_alpha_004.py  verify_enhancer_real.py  verify_new_strategy.py  verify_portfolio_enhancer.py  walk_forward_ridge_support.py
src/: __init__.py  cli.py  research_orchestrator.py  research_pipeline.py  walk_forward_validator.py
tests/: test_artifact.py  test_cli.py  test_config.py  test_config_audit.py  test_factor_pool_governance.py  test_factor_response.py  test_gate.py  test_ic_monitor.py  test_models.py  test_pipeline.py  test_portfolio.py  test_reporting_metrics.py  test_research_protocol.py  test_risk.py  test_smoke.py  test_strategy_alignment.py  test_suites.py
(+165 files in other folders)
