[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmt-investment-assistant"
version = "0.1.0"
description = "A local-first QMT (Quantitative Market Trading) investment assistant for A-share research, backtesting, and execution."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Leo984357"},
]
keywords = ["quantitative-finance", "qmt", "a-shares", "backtesting", "machine-learning", "investment"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "akshare>=1.17",
  "baostock>=0.8.9",
  "duckdb>=1.5",
  "lightgbm>=4.6",
  "mlflow>=3.10",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=21.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "scipy>=1.14",
  "streamlit>=1.32",
]

[project.scripts]
qmt-assistant = "src.cli:run"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "smoke: quick smoke tests",
  "slow: slower integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["N"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
